Added patch to jinterop 2.0.8 to allow j-interop to work more like linix WMIC see http://sourceforge.net/p/j-interop/patches/14/ Adding WMI implementation based on DCOM by Danny Tylman also see discussion at http://sourceforge.net/p/j-interop/discussion/600729/thread/f54279c1/ Support of Windows Vista / Windows 7 Trying to copy the way Samba4 does WMI on Windows7 machines; this is an implementation of the WMI protocol IDLs. After applying the patch, look at : org.jinterop.dcom.impls.wmi.WMIC.java for testing.Currently, the only thing that is working is to perform WMI queries, creating objects and calling method does not work